@@ -30,15 +30,16 @@
                                   [org.clojure/core.async "0.2.395"]
                                   [stylefruits/gniazdo "1.0.0"]]
                    :plugins      [[test2junit "1.2.2"]]
+                   :jvm-opts     ["--add-modules" "java.xml.bind"]
                    :test2junit-output-dir ~(or (System/getenv "CIRCLE_TEST_REPORTS")
                                                "target/test2junit")}
              :test {:jvm-opts ["-Xms512m" "-Xmx2g"]}
              :default [:base :system :user :provided :dev :dev-environ]
              :uberjar {:aot [#"time-tracker.*"]}}
-
   :aliases {"test"       ["with-profile" "+test-environ" "test"]
             "test2junit" ["with-profile" "+test-environ" "test2junit"]
             "migrate"    ["run" "-m" "time-tracker.migration/lein-migrate-db"]
             "rollback"   ["run" "-m" "time-tracker.migration/lein-rollback-db"]}
   :monkeypatch-clojure-test false
-  :uberjar-exclusions [#"dev.*"])
+  :uberjar-exclusions [#"dev.*"]
+  )
